--- a/ng2angle/src/app/routes/ecommerce/orderview/orderview.component.html
+++ b/ng2angle/src/app/routes/ecommerce/orderview/orderview.component.html
@@ -68,7 +68,7 @@
                     <div class="form-group row">
                         <div class="col-md-4">Email:</div>
                         <div class="col-md-8">
-                            <strong>addisong@mail.com</strong>
+                            <strong>addisong&#64;mail.com</strong>
                         </div>
                     </div>
                     <div class="form-group row">
