--- a/ng2angle/src/app/routes/extras/settings/settings.component.html
+++ b/ng2angle/src/app/routes/extras/settings/settings.component.html
@@ -97,11 +97,11 @@
                             <strong>Your email addresses</strong>
                         </p>
                         <p>
-                            <span class="mr-2">email@someaddress.com</span>
+                            <span class="mr-2">email&#64;someaddress.com</span>
                             <span class="badge badge-success">primary</span>
                         </p>
                         <p>
-                            <span class="mr-2">another.email@someaddress.com</span>
+                            <span class="mr-2">another.email&#64;someaddress.com</span>
                             <span class="badge bg-gray">private</span>
                         </p>
                     </div>
