--- a/ng2angle/src/app/routes/forms/standard/standard.component.html
+++ b/ng2angle/src/app/routes/forms/standard/standard.component.html
@@ -13,7 +13,7 @@
             <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
             <div class="input-group mb-2 mr-sm-2">
                 <div class="input-group-prepend">
-                    <div class="input-group-text">@</div>
+                    <div class="input-group-text">&#64;</div>
                 </div>
                 <input class="form-control" id="inlineFormInputGroupUsername2" type="text" placeholder="Username" />
             </div>
@@ -156,7 +156,7 @@
                 <div class="form-group row">
                     <label class="col-md-2 col-form-label">Static control</label>
                     <div class="col-md-10">
-                        <p class="form-control-plaintext">email@example.com</p>
+                        <p class="form-control-plaintext">email&#64;example.com</p>
                     </div>
                 </div>
             </fieldset>
@@ -386,7 +386,7 @@
                                     <label for="validationServerUsername">Username</label>
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">@</span>
+                                            <span class="input-group-text" id="inputGroupPrepend3">&#64;</span>
                                         </div>
                                         <input class="form-control is-invalid" id="validationServerUsername" type="text" placeholder="Username" aria-describedby="inputGroupPrepend3" required="" />
                                         <div class="invalid-feedback">Please choose a username.</div>
@@ -446,14 +446,14 @@
                     <div class="col-md-10">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon1">@</span>
+                                <span class="input-group-text" id="basic-addon1">&#64;</span>
                             </div>
                             <input class="form-control" type="text" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" />
                         </div>
                         <div class="input-group mb-3">
                             <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2" />
                             <div class="input-group-append">
-                                <span class="input-group-text" id="basic-addon2">@example.com</span>
+                                <span class="input-group-text" id="basic-addon2">&#64;example.com</span>
                             </div>
                         </div>
                         <label for="basic-url">Your vanity URL</label>
