--- a/ng2angle/src/app/routes/tables/extended/extended.component.html
+++ b/ng2angle/src/app/routes/tables/extended/extended.component.html
@@ -36,10 +36,10 @@
                             <img class="img-fluid circle" src="assets/img/user/01.jpg" alt="Image" />
                         </div>
                     </td>
-                    <td>@twitter</td>
+                    <td>&#64;twitter</td>
                     <td>Larry</td>
                     <td>the Bird</td>
-                    <td>mail@example.com</td>
+                    <td>mail&#64;example.com</td>
                     <td class="text-center">
                         <div class="radial-bar radial-bar-25 radial-bar-xs" data-label="25%"></div>
                     </td>
@@ -60,10 +60,10 @@
                             <img class="img-fluid circle" src="assets/img/user/02.jpg" alt="Image" />
                         </div>
                     </td>
-                    <td>@mdo</td>
+                    <td>&#64;mdo</td>
                     <td>Mark</td>
                     <td>Otto</td>
-                    <td>mail@example.com</td>
+                    <td>mail&#64;example.com</td>
                     <td class="text-center">
                         <div class="radial-bar radial-bar-50 radial-bar-xs" data-label="50%"></div>
                     </td>
@@ -84,10 +84,10 @@
                             <img class="img-fluid circle" src="assets/img/user/03.jpg" alt="Image" />
                         </div>
                     </td>
-                    <td>@fat</td>
+                    <td>&#64;fat</td>
                     <td>Jacob</td>
                     <td>Thornton</td>
-                    <td>mail@example.com</td>
+                    <td>mail&#64;example.com</td>
                     <td class="text-center">
                         <div class="radial-bar radial-bar-80 radial-bar-xs" data-label="80%"></div>
                     </td>
