--- a/ng2angle/src/app/routes/widgets/widgets/widgets.component.html
+++ b/ng2angle/src/app/routes/widgets/widgets/widgets.component.html
@@ -210,7 +210,7 @@
                         <img class="img-thumbnail circle thumb128" src="assets/img/user/06.jpg" alt="Image">
                         <h3 class="m-0">Chris</h3>
                         <p class="m-0">
-                            <em class="fab fa-twitter fa-fw"></em>@chris</p>
+                            <em class="fab fa-twitter fa-fw"></em>&#64;chris</p>
                     </div>
                 </div>
             </div>
@@ -562,9 +562,9 @@
                             <li class="mb-1">
                                 <em class="fas fa-map-marker-alt fa-fw"></em>ASD, Qwerty</li>
                             <li class="mb-1">
-                                <em class="fab fa-twitter fa-fw"></em>@asdasd</li>
+                                <em class="fab fa-twitter fa-fw"></em>&#64;asdasd</li>
                             <li class="mb-1">
-                                <em class="fa fa-envelope fa-fw"></em>asdasd@mail.com</li>
+                                <em class="fa fa-envelope fa-fw"></em>asdasd&#64;mail.com</li>
                         </ul>
                     </div>
                 </div>
