--- a/ng2angle/src/app/routes/elements/typography/typography.component.html
+++ b/ng2angle/src/app/routes/elements/typography/typography.component.html
@@ -91,7 +91,7 @@
                <abbr title="Phone">P:</abbr>(123) 456-7890</address>
             <address>
                <strong>Full Name</strong>
-               <br/><a href="mailto:#">first.last@example.com</a>
+               <br/><a href="mailto:#">first.last&#64;example.com</a>
             </address>
          </div>
       </div>
