--- a/ng2angle/src/app/routes/tables/standard/standard.component.html
+++ b/ng2angle/src/app/routes/tables/standard/standard.component.html
@@ -25,19 +25,19 @@
                         <td>1</td>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>&#64;mdo</td>
                      </tr>
                      <tr>
                         <td>2</td>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>&#64;fat</td>
                      </tr>
                      <tr>
                         <td>3</td>
                         <td>Larry</td>
                         <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>&#64;twitter</td>
                      </tr>
                   </tbody>
                </table>
@@ -68,19 +68,19 @@
                         <td>1</td>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>&#64;mdo</td>
                      </tr>
                      <tr>
                         <td>2</td>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>&#64;fat</td>
                      </tr>
                      <tr>
                         <td>3</td>
                         <td>Larry</td>
                         <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>&#64;twitter</td>
                      </tr>
                   </tbody>
                </table>
@@ -113,19 +113,19 @@
                         <td>1</td>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>&#64;mdo</td>
                      </tr>
                      <tr>
                         <td>2</td>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>&#64;fat</td>
                      </tr>
                      <tr>
                         <td>3</td>
                         <td>Larry</td>
                         <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>&#64;twitter</td>
                      </tr>
                   </tbody>
                </table>
@@ -152,19 +152,19 @@
                         <td>1</td>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>&#64;mdo</td>
                      </tr>
                      <tr>
                         <td>2</td>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>&#64;fat</td>
                      </tr>
                      <tr>
                         <td>3</td>
                         <td>Larry</td>
                         <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>&#64;twitter</td>
                      </tr>
                   </tbody>
                </table>
@@ -190,19 +190,19 @@
             <th scope="row">1</th>
             <td>Mark</td>
             <td>Otto</td>
-            <td>@mdo</td>
+            <td>&#64;mdo</td>
          </tr>
          <tr>
             <th scope="row">2</th>
             <td>Jacob</td>
             <td>Thornton</td>
-            <td>@fat</td>
+            <td>&#64;fat</td>
          </tr>
          <tr>
             <th scope="row">3</th>
             <td>Larry</td>
             <td>the Bird</td>
-            <td>@twitter</td>
+            <td>&#64;twitter</td>
          </tr>
       </tbody>
    </table>
@@ -228,19 +228,19 @@
                         <td>1</td>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>&#64;mdo</td>
                      </tr>
                      <tr>
                         <td>2</td>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>&#64;fat</td>
                      </tr>
                      <tr>
                         <td>3</td>
                         <td>Larry</td>
                         <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>&#64;twitter</td>
                      </tr>
                   </tbody>
                </table>
@@ -267,25 +267,25 @@
                         <td>1</td>
                         <td>Mark</td>
                         <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>&#64;mdo</td>
                      </tr>
                      <tr class="table-info">
                         <td>2</td>
                         <td>Jacob</td>
                         <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>&#64;fat</td>
                      </tr>
                      <tr class="table-warning">
                         <td>3</td>
                         <td>Larry</td>
                         <td>the Bird</td>
-                        <td>@twitter</td>
+                        <td>&#64;twitter</td>
                      </tr>
                      <tr class="table-danger">
                         <td>4</td>
                         <td>John</td>
                         <td>Smith</td>
-                        <td>@jsmith</td>
+                        <td>&#64;jsmith</td>
                      </tr>
                   </tbody>
                </table>
