--- a/escolarWeb/src/app/shared/styles/app/typo.scss
+++ b/escolarWeb/src/app/shared/styles/app/typo.scss
@@ -7,40 +7,40 @@
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Light.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-Light.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-Light.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-Light.ttf') format('truetype');
+    src: url('../../../../../node_modules/source-sans-pro/WOFF2/TTF/SourceSansPro-Light.ttf.woff2') format('woff2'),
+         url('../../../../../node_modules/source-sans-pro/WOFF/OTF/SourceSansPro-Light.otf.woff') format('woff'),
+         url('../../../../../node_modules/source-sans-pro/OTF/SourceSansPro-Light.otf') format('opentype'),
+         url('../../../../../node_modules/source-sans-pro/TTF/SourceSansPro-Light.ttf') format('truetype');
 }
 @font-face{
     font-family: 'Source Sans Pro';
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Regular.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-Regular.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-Regular.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-Regular.ttf') format('truetype');
+    src: url('../../../../../node_modules/source-sans-pro/WOFF2/TTF/SourceSansPro-Regular.ttf.woff2') format('woff2'),
+         url('../../../../../node_modules/source-sans-pro/WOFF/OTF/SourceSansPro-Regular.otf.woff') format('woff'),
+         url('../../../../../node_modules/source-sans-pro/OTF/SourceSansPro-Regular.otf') format('opentype'),
+         url('../../../../../node_modules/source-sans-pro/TTF/SourceSansPro-Regular.ttf') format('truetype');
 }
 @font-face{
     font-family: 'Source Sans Pro';
     font-weight: 400;
     font-style: italic;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-It.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-It.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-It.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-It.ttf') format('truetype');
+    src: url('../../../../../node_modules/source-sans-pro/WOFF2/TTF/SourceSansPro-It.ttf.woff2') format('woff2'),
+         url('../../../../../node_modules/source-sans-pro/WOFF/OTF/SourceSansPro-It.otf.woff') format('woff'),
+         url('../../../../../node_modules/source-sans-pro/OTF/SourceSansPro-It.otf') format('opentype'),
+         url('../../../../../node_modules/source-sans-pro/TTF/SourceSansPro-It.ttf') format('truetype');
 }
 @font-face{
     font-family: 'Source Sans Pro';
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Semibold.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-Semibold.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-Semibold.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-Semibold.ttf') format('truetype');
+    src: url('../../../../../node_modules/source-sans-pro/WOFF2/TTF/SourceSansPro-Semibold.ttf.woff2') format('woff2'),
+         url('../../../../../node_modules/source-sans-pro/WOFF/OTF/SourceSansPro-Semibold.otf.woff') format('woff'),
+         url('../../../../../node_modules/source-sans-pro/OTF/SourceSansPro-Semibold.otf') format('opentype'),
+         url('../../../../../node_modules/source-sans-pro/TTF/SourceSansPro-Semibold.ttf') format('truetype');
 }
 
 
@@ -84,5 +84,5 @@ h6,.h6 {
 }
 
 p {
-    margin-bottom: .65rem; // ~10px
+    margin-bottom: .65rem; // ../../../../../node_modules/10px
 }
